final touches hopefully

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>StoryStore</title>
   </head>
   <body style="background-color: #f2f2f2">
     <!-- Navigation -->
